<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_chart"
        android:icon="@drawable/piechart"
        android:title="@string/title_chart"
        android:checkable="true"/>

    <item
        android:id="@+id/fab"
        android:enabled="false"
        android:title=""
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_report"
        android:icon="@drawable/clipboard"
        android:title="@string/title_report"
        android:checkable="true"/>

    <item
        android:id="@+id/bottom_user"
        android:icon="@drawable/user"
        android:title="@string/title_me"
        android:checkable="true"/>
</menu>