<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="12dp"

    android:layout_marginHorizontal="20dp">
    
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvMessage"
            android:gravity="center"
            android:text="@string/title_message_delete"
            android:textColor="@color/red_orange"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnNo"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="14sp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:layout_marginEnd="36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnYes"
                style="?android:attr/buttonBarButtonStyle"
                android:textSize="14sp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:layout_marginStart="36dp"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>